added navbar and fixed home page

--- a/styles.css
+++ b/styles.css
@@ -2,44 +2,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Manjari');
 /* The body class targets the <body> tag in your html file */
 body {
-    background-color: rgb(211, 184, 197);
     font-family: "Manjari", sans-serif;
     margin: 0;
 }
 
-.name {
-    padding: 40px;
-    background-color: #98768E;
-    color: #FFFFFF;
-    font-size: 16px;
-    position: sticky;
-    top: 0;
+.home-content {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(background-website.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    padding: 0 15px;
+    text-align: center;
+    padding: 200px 15px;
     gap: 20px;
 }
 
-.name a {
-    text-decoration: none;
-    color: #281E30;
-    text-align: bottom;
+.home-content h1 {
+    font-size: 80px;
+}
+
+.home-content h2 {
+    font-size: 40px;
+}
+
+.home-content a {
+    font-size: 30px;
 }
 
 /* The following classes are used to style the corresponding html classes */
-.menu {
-    padding: 40px;
-    background-color: #F6D4CF;
-    color: #F6D4CF;
-    font-size: 16px;
-    position: sticky;
-    top: 0;
-    display: flex;
-    gap: 20px;
-}
-
-.menu a {
-    text-decoration: none;
-    color: #281E30;
-}
 
 .content {
     padding: 40px;
