--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla');
-@import url('https://fonts.googleapis.com/css2?family=Manjari');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Manjari:wght@100;400;700&family=Quicksand:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 /* The body class targets the <body> tag in your html file */
 body {
-    font-family: "Manjari", sans-serif;
+    font-family: "Caveat";
     margin: 0;
 }
+
+.navbar {
+    background-color: #DAD5C9;
+  }
+  
+  .navbar .nav-link,
+  .navbar .navbar-brand {
+    color: #A17E66;
+    font-size: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  .navbar .nav-link:hover,
+  .navbar .navbar-brand:hover {
+    color: #88AFCD;
+  }
 
 .home-content {
     display: flex;
