--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Manjari:wght@100;400;700&family=Quicksand:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Permanent+Marker&display=swap');
 /* The body class targets the <body> tag in your html file */
 body {
     font-family: "Caveat";
     margin: 0;
+    background-color: #DAD5C9;
 }
 
 .navbar {
-    background-color: #DAD5C9;
+    background-color: #88AFCD;
   }
   
   .navbar .nav-link,
   .navbar .navbar-brand {
-    color: #A17E66;
+    color: #DAD5C9;
     font-size: 25px;
     margin-left: 20px;
     margin-right: 20px;
@@ -39,6 +40,7 @@ body {
 }
 
 .home-content h1 {
+    font-family: "Permanent Marker";
     font-size: 80px;
 }
 
@@ -54,4 +56,22 @@ body {
 
 .content {
     padding: 40px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #CBCFD2;
+    border-radius: 25px;
+    box-shadow: 5px 5px 10px #B5C7D6;
+    margin: 3% 3%;
+}
+
+.profile-pic {
+    border: 7px solid #88AFCD;
+    height: 40vh;
+}
+
+.circle-frame {
+    border-radius: 50%;
 }
