--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,11 @@ body {
     transform: translateY(0);
 }
 
+.container.hidden {
+    opacity: 0;
+    transform: translateY(-50px);
+}
+
 .container:nth-child(2) {
     animation-delay: 0s;
 }
