--- a/styles.css
+++ b/styles.css
@@ -400,3 +400,133 @@ body {
     max-width: 80%;
     margin: 0 auto;
 }
+
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+    gap: 2.5rem;
+    padding: 2rem 60px;
+}
+
+.skills-box {
+    flex: 0 0 180px;
+    padding: 1.5rem;
+    color: #000;
+    cursor: pointer;
+    transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.skills-box:hover {
+    transform: translateY(-10px);
+}
+
+.skills-box:hover > .skill-title:after, .skills-box:hover > .skill-title:before{
+    width: 35px;
+}
+
+.skills-box:hover .img {
+    transform: translateY(-10px);
+}
+
+.my-skills-title {
+  font-family: "Permanent Marker";
+  font-size: 40px;
+  text-align: center;
+  width: 100%;
+  margin: 3% 0 20px 0;
+  color: black;
+}
+
+.skill-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    position: relative;
+}
+
+.skill-title:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    width: 0;
+    height: 4px;
+    border-radius: 0 2px 2px 0;
+    background-color: #2ecc71;
+    transition: .5s;
+}
+
+.skill-title:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 4px;
+    border-radius: 0 2px 2px 0;
+    background-color: #2ecc71;
+    transition: .5s;
+}
+
+.img { 
+    width: 120px;
+    height: 120px;
+    position: relative;
+    border-radius: 60px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+    margin: 0 auto;
+    border: 3px solid #88AFCD;
+}
+
+.img:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 90px;
+    background: rgba(100, 100, 100, 0.5);
+    border-radius: 45px 0 0 45px;
+}
+
+.skill-title h3{
+    color: #000;
+    margin-top: 1rem;
+    font-size: 28px;
+}
+
+.skill-icon{
+    width: 70px;
+    height: 70px;
+    z-index: 2;
+}
+
+.skills-box p {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #000;
+}
+
+@media screen and (max-width: 990px) {
+    .skills-container {
+        padding: 2rem 40px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .skills-container {
+        gap: 1.5rem;
+    }
+}
