--- a/styles.css
+++ b/styles.css
@@ -512,12 +512,21 @@ body {
     z-index: 2;
 }
 
-.skills-box p {
-    font-size: 24px;
-    font-weight: bold;
-    margin-top: 10px;
-    color: #000;
-}
+.progress-container {
+    width: 100%;
+    height: 10px;
+    background-color: #ddd;
+    border-radius: 10px;
+    margin-top: 15px;
+    overflow: hidden;
+  }
+  
+  .progress-bar {
+    height: 100%;
+    background-color: #88AFCD;
+    border-radius: 10px;
+    transition: width 1s ease-in-out;
+  }
 
 @media screen and (max-width: 990px) {
     .skills-container {
