--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius&family=DynaPuff:wght@400..700&display=swap');
 /* The body class targets the <body> tag in your html file */
+:root {
+    --header-color: #093E55;
+    --light-text-color: #DAD5C9;
+    --text-color: #093E55;
+    --container-color: #CBCFD2;
+    --button-color: #DAD5C9;
+    --border-color: #5C493C;
+    --background-color: #DAD5C9;
+    --shadow-color: #B5C7D6;
+    --shade-color: #88AFCD;
+
+    --heading-font: "DynaPuff";
+    --text-font: "Delius";
+  }  
+
 body {
-    font-family: "Caveat";
+    font-family: var(--text-font);
     margin: 0;
-    background-color: #DAD5C9;
+    background-color: var(--background-color);
 }
 
 .navbar {
-    background-color: #88AFCD;
+    background-color: var(--header-color);
   }
   
   .navbar .nav-link,
   .navbar .navbar-brand {
-    color: #DAD5C9;
+    color: var(--light-text-color);
     font-size: 25px;
     margin-left: 20px;
     margin-right: 20px;
@@ -20,7 +35,7 @@ body {
   
   .navbar .nav-link:hover,
   .navbar .navbar-brand:hover {
-    color: #88AFCD;
+    color: (var(--light-text-color));
   }
 
 .home-content {
@@ -40,7 +55,7 @@ body {
 }
 
 .home-content h1 {
-    font-family: "Permanent Marker";
+    font-family: var(--heading-font);
     font-size: 80px;
 }
 
@@ -61,14 +76,14 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: #CBCFD2;
+    background-color: var(--container-color);
     border-radius: 25px;
-    box-shadow: 5px 5px 10px #B5C7D6;
+    box-shadow: 5px 5px 10px var(--shadow-color);
     margin: 3% 3%;
 }
 
 .content h1 {
-    font-family: "Permanent Marker";
+    font-family: var(--heading-font);
     font-size: 40px;
 }
 
@@ -80,19 +95,19 @@ body {
     margin-right: 20px;
 }
 .profile-pic {
-    border: 7px solid #88AFCD;
+    border: 7px solid var(--border-color);
     height: 40vh;
 }
 
 .resume-button {
-    border: 3px solid #B5C7D6;
+    border: 3px solid var(--border-color);
     border-radius: 50px;
     color: black;
     text-align: center;
     font-size: 20px;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #DAD5C9;
+    background-color: var(--button-color);
 }
 
 .resume-button:hover {
@@ -110,14 +125,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #CBCFD2;
+    background-color: var(--container-color);
     border-radius: 25px;
-    box-shadow: 5px 5px 10px #B5C7D6;
+    box-shadow: 5px 5px 10px var(--shadow-color);
     margin: 3% 3%;
 }
 
 .timeline h1 {
-    font-family: "Permanent Marker";
+    font-family: var(--header-font);
     font-size: 40px;
     text-align: center;
     width: 100%;
@@ -129,7 +144,7 @@ body {
     position: absolute;
     width: 6px;
     height: 80%;
-    background: white;
+    background: var(--border-color);
     top: 120px;
     left: 50%;
     margin-left: -3px;
@@ -144,7 +159,6 @@ body {
     justify-content: flex-start;
     min-height: 80px;
     margin-bottom: 40px;
-    background: none;
     padding: 0;
     opacity: 0;
     transform: translateY(50px);
@@ -208,17 +222,18 @@ body {
 
 .text-box {
     position: relative;
-    background-color: #DAD5C9;
+    background-color: var(--button-color);
     border-radius: 6px;
     font-size: 15px;
     padding: 20px 30px;
     width: 40%;
     z-index: 1;
+    border: 3px solid var(--shadow-color);
 }
 
 .text-box h2 {
     font-weight: 600;
-    font-family: "Caveat";
+    font-family: var(--header-font);
     font-size: 24px;
 }
 
@@ -233,32 +248,36 @@ body {
 }
 
 .left-container .text-box {
-    margin-right: 60px;
+    margin-right: 0;
     margin-left: 0;
-    text-align: right;
+    text-align: center;
 }
 
 .right-container .text-box {
-    margin-left: 60px;
+    margin-left: 0px;
     margin-right: 0;
-    text-align: left;
+    text-align: center;
 }
 
 
 @media screen and (max-width: 600px) {
     .timeline {
-        margin: 50px auto;
+        padding-left: 80px;
+        margin-left: 80px auto;
     }
     .timeline::after {
-        left: 30px;
+        left: 50px;
     }
     .container {
         width: 100%;
-        padding-left: 80px;
+        padding-left: 100px;
         padding-right: 25px;
     }
     .text-box {
         font-size: 13px;
+    }
+    .text-box h2 {
+        font-size: 15px;
     }
     .text-box small {
         margin-bottom: 10px;
@@ -267,7 +286,7 @@ body {
         left: 0;
     }
     .left-container img, .right-container img {
-        left: 10px;
+        left: 0px;
     }
 }
 
@@ -282,6 +301,7 @@ body {
   .contact-title {
     text-align: center;
     margin-bottom: 20px;
+    font-family: var(--heading-font);
   }
 
   .contact-info {
@@ -316,24 +336,24 @@ body {
     font-size: 1em;
     width: 100%;
     box-sizing: border-box;
-    background-color: #CBCFD2;
-    border: 3px solid #88AFCD;
+    background-color: var(--button-color);
+    border: 3px solid var(--shadow-color);
     border-radius: 15px;
   }  
 
   .email-send-button {
-    border: 3px solid #B5C7D6;
+    border: 3px solid var(--border-color);
     border-radius: 50px;
     color: black;
     text-align: center;
     font-size: 1em;
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #DAD5C9;
+    background-color: var(--background-color);
     display: block;
   }
   .email-send-button:hover {
-    color: #A17E66;
+    color: var(--border-color);
   }
 
 .social-icons-2 {
@@ -390,7 +410,7 @@ body {
 }
 
 .project-title a:hover {
-    color: #A17E66;
+    color: var(--border-color);
 }
 
 .project-description {
@@ -459,7 +479,7 @@ body {
     width: 0;
     height: 4px;
     border-radius: 0 2px 2px 0;
-    background-color: #2ecc71;
+    background-color: var(--border-color);
     transition: .5s;
 }
 
@@ -471,7 +491,7 @@ body {
     width: 0;
     height: 4px;
     border-radius: 0 2px 2px 0;
-    background-color: #2ecc71;
+    background-color: var(--border-color);
     transition: .5s;
 }
 
@@ -486,7 +506,7 @@ body {
     align-items: center;
     transition: .5s;
     margin: 0 auto;
-    border: 3px solid #88AFCD;
+    border: 3px solid var(--shadow-color);
 }
 
 .img:after {
@@ -523,7 +543,7 @@ body {
   
   .progress-bar {
     height: 100%;
-    background-color: #88AFCD;
+    background-color: var(--shade-color);
     border-radius: 10px;
     transition: width 1s ease-in-out;
   }
