--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     --border-color: #5C493C;
     --background-color: #DAD5C9;
     --shadow-color: #B5C7D6;
-    --shade-color: #88AFCD;
+    --shade-color: #88afcd;
 
     --heading-font: "DynaPuff";
     --text-font: "Delius";
@@ -33,10 +33,10 @@ body {
     margin-right: 20px;
   }
   
-  .navbar .nav-link:hover,
-  .navbar .navbar-brand:hover {
-    color: (var(--light-text-color));
-  }
+.navbar .nav-link:hover,
+.navbar .navbar-brand:hover {
+    color: var(--shadow-color);
+}
 
 .home-content {
     display: flex;
@@ -204,8 +204,8 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 40px;
-    height: 40px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     z-index: 2;
 }
@@ -260,33 +260,68 @@ body {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
+    /* Adjust the timeline for single column layout */
     .timeline {
-        padding-left: 80px;
-        margin-left: 80px auto;
+        padding: 40px 20px;
     }
+    
     .timeline::after {
-        left: 50px;
+        left: 30px; /* Move timeline to left side */
     }
+    
+    /* Adjust containers to single column layout */
     .container {
+        flex-direction: row; /* All containers have same direction */
+        justify-content: flex-start;
         width: 100%;
-        padding-left: 100px;
-        padding-right: 25px;
+        padding-left: 60px; /* Space for timeline */
     }
+    
+    /* Position icons on the left */
+    .container img {
+        left: 30px;
+        top: 32px; /* Align with top of text box */
+    }
+    
+    /* Make all text boxes same width and alignment */
     .text-box {
-        font-size: 13px;
+        width: calc(100% - 60px); /* Full width minus padding */
+        margin-left: 0;
+        text-align: left;
     }
+    
+    /* Override the original left/right specific styling */
+    .left-container, .right-container {
+        flex-direction: row;
+    }
+    
+    .left-container .text-box, .right-container .text-box {
+        text-align: left;
+    }
+    
+    /* Adjust font sizes for smaller screens */
     .text-box h2 {
-        font-size: 15px;
+        font-size: 20px;
     }
-    .text-box small {
-        margin-bottom: 10px;
+    
+    .text-box p {
+        font-size: 14px;
     }
-    .right-container {
-        left: 0;
+}
+
+/* Even smaller screens */
+@media screen and (max-width: 480px) {
+    .timeline {
+        padding: 30px 10px 30px 30px; /* More compact */
     }
-    .left-container img, .right-container img {
-        left: 0px;
+    
+    .text-box {
+        padding: 15px;
+    }
+    
+    .text-box h2 {
+        font-size: 18px;
     }
 }
 
@@ -558,4 +593,25 @@ body {
     .skills-container {
         gap: 1.5rem;
     }
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    width: 10%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel-control-prev {
+    left: -30px;
+}
+
+.carousel-control-next {
+    right: -30px;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    padding: 15px;
 }
